Fix modal on mobile devices

--- a/css/main.css
+++ b/css/main.css
@@ -1,16 +1,3 @@
 .overline {
     text-decoration: overline;
 }
-
-.modal 
-{ 
-    overflow-y: hidden;
-    overflow-x: hidden;
-}
-
-.modal-dialog
-{ 
-    max-height: 100%;
-    overflow-y: hidden;
-    overflow-x: hidden;
-}
